welcome.lessons.welcome.loopwhile.WhileMoria.scala.error
Balin:5: error: value poseBiscuit is not a member of Unit
while( ! estSurBiscuit()) { recule() poseBiscuit();}
                                     ^